# Agentes_test

./: CrewAI - Platform for Multi AI Agents Systems (15_11_2025 9：50：48 p.m.).html  CrewAI - Platform for Multi AI Agents Systems (15_11_2025 9：52：12 p.m.).html  CrewAI - Platform for Multi AI Agents Systems (15_11_2025 9：57：02 p.m.).html  README.md  ejemplo.md
agente/: README.md  pyproject.toml
agente/src/social_media_content_scheduling_automation/: crew.py  main.py
agente/src/social_media_content_scheduling_automation/config/: agents.yaml  tasks.yaml
clean/: CrewAI - Build - Automations1.html  CrewAI - Platform for Multi AI Agents Systems (16_11_2025 8：33：59 p.m.).html  CrewAI Enterprise - Platform for Multi AI Agents Systems (16_11_2025 8：30：16 p.m.).html  Documentation - GetStarted- Installation.html  Documentation - GetStarted- Introduction .html  Documentation - GetStarted- Quickstart.html
clean/API Reference/: GET _inputs - CrewAI (17_11_2025 2：36：14 a.m.).html  GET _status_{kickoff_id} - CrewAI (17_11_2025 2：36：26 a.m.).html  Introduction - CrewAI (17_11_2025 2：35：06 a.m.).html  POST _kickoff - CrewAI (17_11_2025 2：35：25 a.m.).html  (+1 more)
original/: CrewAI - Build - Automations1.html  CrewAI - Platform for Multi AI Agents Systems (16_11_2025 8：33：59 p.m.).html  CrewAI Enterprise - Platform for Multi AI Agents Systems (16_11_2025 8：30：16 p.m.).html  Documentation - GetStarted- Installation.html  Documentation - GetStarted- Introduction .html  Documentation - GetStarted- Quickstart.html
scripts/: clean_html.py  update_links.py
test/: test.html
(+674 files in other folders)
