[project]
name = "social_media_content_scheduling_automation"
version = "0.1.0"
description = "social_media_content_scheduling_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.4.1",
]

[project.scripts]
social_media_content_scheduling_automation = "social_media_content_scheduling_automation.main:run"
run_crew = "social_media_content_scheduling_automation.main:run"
train = "social_media_content_scheduling_automation.main:train"
replay = "social_media_content_scheduling_automation.main:replay"
test = "social_media_content_scheduling_automation.main:test"
run_with_trigger = "social_media_content_scheduling_automation.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
